@@ -1,3 +1,10 @@
+2009-05-02 Andreas Radke <andyrtr at archlinux.org>
+
+        * 3.0.99.7-2 :
+	build without stlport on x86_64 and with on i686
+	to fix extensions (e.g. SunPDFImport)
+	try move mono and gstreamer to optdepends
+
 2009-04-25 Andreas Radke <andyrtr at archlinux.org>
 
         * 3.0.99.7-1 :
